--- a/README
+++ b/README
@@ -1,5 +1,25 @@
+# Image Duplicate Finder
+Create an python program that will sort duplicated images into folders and move unduplicated images into one folder 
+
+# Screenshots
+
+![After Running Python Program](https://github.com/ronknight/Image-Duplicate-Finder/images/screenshots.png)
+
+# Installation
+
+1. intall python 3.7.3 or newer
+2. run "pip install -r requirements.txt"
+3. copy all images to be sorted on your installation folder
+4. run "python imgdupfind.py"
+5. image that are duplicated are on their newly created folders.
+6. unduplicated images are on folder named "unduplicated".
+
+# Acknowledgement
+
+-- Caelyn McAulay, caelyn@ceruleanrodent.com, January 2012
+
+# Description
 
 Image Duplicate Finder is exactly what it sounds like. If you have a large number of images some of which are duplicated or nearly duplicated (resizings, different shadings, minor cropping etc.), this will identify many of them. It has a fairly high false negative rate (i.e. it will miss some duplicates); but at the default level of sensitivity has not had an observed false positive (i.e. it has not identified two images are duplicates when they are not). If this happens to you, let me know!
 
 
--- Caelyn McAulay, caelyn@ceruleanrodent.com, January 2012
